# Cedica-project

./: README.md  package-lock.json
admin/: .gitignore  app.py  docker-compose.yml  pyproject.toml
admin/migrations/versions/: 3afa55c31ac7_added_user_functionality.py  43d6f9edbcb5_all_migrations.py  5181c9495da0_added_nullable_member_id_and_role_id.py  c57dda2500b2_fixed_names.py
admin/src/core/: bcrypt.py  config.py  database.py  google_oauth.py  seeds.py
admin/src/core/auth/: __init__.py  permission.py  role.py  role_permission.py  user.py
admin/src/core/files/: __init__.py  files.py  horse_file.py  jya_file.py  member_file.py
admin/src/core/finance/: __init__.py  charges.py  payments.py
admin/src/core/horses/: __init__.py  horse.py  horse_rider.py  horse_trainer.py
admin/src/core/people/: __init__.py  jya.py  jya_professional_association.py  member.py  people.py
admin/src/core/public/: __init__.py  message.py  publication.py
admin/src/web/: __init__.py  storage.py
admin/src/web/context/: __init__.py  nav_context.py
admin/src/web/controllers/: articles.py  auth.py  charges.py  db.py  home.py  horses.py  jyas.py  members.py  messages.py  payments.py  publications.py  reports.py  users.py
admin/src/web/handlers/: auth.py  error.py  pagination.py  validation.py
admin/src/web/schemas/: auth.py  charges.py  files.py  horses.py  jya.py  members.py  payments.py  users.py
admin/src/web/templates/: _macros.html  add_modal.html  edit_modal.html  edit_modal_with_files.html  error.html  (+8 more)
admin/static/: error.css  flash.css
admin/static/js/: filters.js
(+101 files in other folders)
